iac/kustomize/base/globalpulse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globalpulse
  namespace: globalpulse
spec:
  selector:
    app: globalpulse
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
